--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,25 +1,27 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins' sans-serif serif;
 }
 
 body {
     background-color: rgb(101, 177, 240);
     font-size: 16px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     overflow-x: hidden;
+    font-family: 'Poppins' sans-serif serif;
 }
 
 .container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     border: none;
-    margin: 80px 0;
+    margin: 60px 0;
     width: 100%;
     max-width: 1200px;
-    height: auto;
+    height: 100%;
     padding: 5px;
 }
 .bg-icon{
@@ -39,31 +41,40 @@ body {
    min-width: 100%;
    max-height: 100%;
 }
+h1{
+    text-align: center;
+}
 
 .login-section {
-    padding: 25px;
-    flex: 1;
-    max-width:40%;
-    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 40px;
+    width: 400px;
+    height: 450px;
+    max-width:100%;
+    background-color: rgb(247, 244, 244);
     border-radius: 8px;
-    margin: 100px auto ;
+    margin: 0;
 
 }
 
 .user-email,
-.user-password {
-    margin-bottom: 10px;
-    padding: 8px 0;
-    margin: auto;
-    font-size: 16px;
+.user-password 
+{   display: block;
+    flex-direction: column;
+    margin:20px;
+    padding: 0;
+    font-size: 20px;
 }
 
 input {
     border-radius: 8px;
-    border: 1px solid rgb(167, 140, 133);
+    border: 1px solid rgb(16, 207, 26);
     width: 100%;
     height: 30px;
     text-align: left;
+   
    
 }
 
@@ -73,13 +84,18 @@ input {
     padding-left: 20px;
    
 }
-.log-btn{
-    margin:10px 0 0 0;
-    display:flex;
-    justify-content: space-between;
+.submit-btn, .sign-up{
+    display: block;
+    flex-direction: column;
+    margin:20px;
+    padding: 0;
 }
 
+
 .log-bnt-login {
+    display: flex;
+    flex-direction:column;
+    justify-content: end;
     background-color: rgb(43, 101, 226);
     height: auto;
     max-width: 100vw;
@@ -88,27 +104,16 @@ input {
     border: none;
     cursor: pointer;
     color: white;
-    font-family: 'Courier New', Courier, monospace;
+   
     font-size: 16px;
     margin: 0;
 
 }
-.sign-up{
-    background-color: rgb(26, 219, 139);
-   align-items: end;
-   border-radius: 9px;
-   padding: 5px;
-}
-
-.sign-up p a{
-    text-decoration: none;
-}
 
 
 .image {
-    max-width: 50%;
+    max-width: 100%;
 }
-
 
 .image img {
     width: 100%;
@@ -117,9 +122,15 @@ input {
     max-height: 300px;
     margin-top:30px ;
     transform: rotate(45deg);
-   
-}
 
+}
+.footer-list{
+    align-items: center;
+    text-align: center;
+    color:#fff;
+    margin: 0;
+    padding: 0;
+}
 
 @media (max-width: 768px) {
     .container {
