--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -1,15 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 .container-signup{
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
+}
+.sign-text{
+    text-align: center;
 }
 .form-input{
     background-color: rgba(192, 202, 135, 0.548);
     align-items: flex-end;
     max-width: 100%;
     width: 450px;
-    margin:50px auto;
-    height: auto;
+    margin:10px auto;
+    height: 550px;
     border-radius: 9px;
     border: 2px solid salmon;
 }
@@ -19,6 +24,7 @@ input {
     width: 100%;
     height: 30px;
     text-align: left;
+   
 }
 .user-first-name,
 .user-last-name,
@@ -28,6 +34,7 @@ input {
 {
     font-size: 16px;
     padding-left: 20px;
+    font-family: 'Poppins',sans-serif,serif;
 }
 h2{
     padding: 8px;
@@ -43,10 +50,10 @@ hr{
 .user-password,
 .user-user-name
 {
-width: 80%;
-padding: 10px;
+width: 70%;
+padding: 3px;
 align-items: center;
-margin: auto;
+margin: auto ;
 font-size: 16px;
 }
 .input-1{
@@ -77,8 +84,11 @@ margin:auto;
 .user-submit,
 .user-reset{
     width: 100%;
-    margin: 0;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    height: 40px;
+    text-align: center;
+    margin: 2px;
+    padding: 3px;
+    font-family: 'Poppins' sans-serif serif;
 }
 
 .sign-up-sing-in{
@@ -111,6 +121,15 @@ margin:auto;
     max-width: 500px;
     max-height: 450px;
     margin:0;
+}
+
+
+.footer-list{
+    text-align: center;
+    padding: 10px;
+    color:#080101;
+       
+        
 }
 
 
